# PMUY-AI

./: AI_USAGE_LOG.md  ASI_COVID_Manufacturing_Project.ipynb  CHARTER.md  Cleaning_and_Naive_DiD.ipynb  Final_Cleaning_and_Naive_DiD.ipynb  README.md  main.py  pyproject.toml  report.md
artifacts/probes/: asi_probe.md  replace_me_probe.md
data/: README.md  industry_shock_recovery_main_sample.csv
figures/: README.md
grading_feedback/: milestone_feedback.md
notebooks/: ASI_COVID_Manufacturing_Project.ipynb  Cleaning_and_Naive_DiD.ipynb  Final_Cleaning_and_Naive_DiD.ipynb
outputs/: README.md  baseline_metric.json  milestone_manifest.json  primary_metric.json
project_code/: template_outputs.py
