[project]
name = "eco6810-msp-forecast"
version = "0.1.0"
description = "ECO 6810 Final Project — MSP Forecasting for Wheat and Paddy"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["project_code"]

