[project]
name = "eco6810-project-template"
version = "0.1.0"
description = "ECO6810 Final Project"
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "statsmodels>=0.14"
]

[tool.uv]
dev-dependencies = []
